--- a/package.json
+++ b/package.json
@@ -9,19 +9,32 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@walletconnect/web3-provider": "^1.8.0",
     "antd": "^4.22.8",
+    "ethers": "^5.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "6"
+    "react-is": "^18.2.0",
+    "react-router-dom": "6",
+    "web3modal": "^1.9.9"
   },
   "devDependencies": {
+    "@types/node": "^18.7.15",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.1",
+    "add": "^2.0.6",
     "autoprefixer": "^10.4.8",
+    "browserify-zlib": "^0.2.0",
+    "buffer": "^6.0.3",
+    "events": "^3.3.0",
     "postcss": "^8.4.16",
+    "process": "^0.11.10",
+    "rollup-plugin-polyfill-node": "^0.10.2",
+    "stream-browserify": "^3.0.0",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.6.4",
+    "util": "^0.12.4",
     "vite": "^3.0.7"
   }
 }
