--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.5",
     "@walletconnect/web3-provider": "^1.8.0",
     "antd": "^4.22.8",
     "ethers": "^5.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
+    "react-redux": "^8.0.2",
     "react-router-dom": "6",
     "web3modal": "^1.9.9"
   },
