--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@reduxjs/toolkit": "^1.8.5",
     "@walletconnect/web3-provider": "^1.8.0",
     "antd": "^4.22.8",
+    "clipboard-copy": "^4.0.1",
     "ethers": "^5.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
