--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-is": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "6",
+    "vite-plugin-svgr": "^2.2.1",
     "web3modal": "^1.9.9"
   },
   "devDependencies": {
