--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/drei": "^9.30.3",
+    "@react-three/fiber": "^8.7.4",
     "@reduxjs/toolkit": "^1.8.5",
     "@walletconnect/web3-provider": "^1.8.0",
     "antd": "^4.22.8",
@@ -19,6 +21,8 @@
     "react-is": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "6",
+    "three": "^0.144.0",
+    "three-stdlib": "^2.15.0",
     "vite-plugin-svgr": "^2.2.1",
     "web3modal": "^1.9.9"
   },
@@ -26,6 +30,7 @@
     "@types/node": "^18.7.15",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@types/three": "^0.144.0",
     "@vitejs/plugin-react": "^2.0.1",
     "add": "^2.0.6",
     "autoprefixer": "^10.4.8",
