--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-is": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "6",
+    "react-use": "^17.4.0",
     "three": "^0.144.0",
     "three-stdlib": "^2.15.0",
     "vite-plugin-svgr": "^2.2.1",
