--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "antd": "^4.22.8",
     "clipboard-copy": "^4.0.1",
     "ethers": "^5.7.0",
+    "graphql": "^16.6.0",
+    "graphql-request": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-is": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "6",
     "react-use": "^17.4.0",
