--- a/package.json
+++ b/package.json
@@ -12,7 +12,16 @@
     "@react-three/drei": "^9.30.3",
     "@react-three/fiber": "^8.7.4",
     "@reduxjs/toolkit": "^1.8.5",
-    "@walletconnect/web3-provider": "^1.8.0",
+    "@web3-react/coinbase-wallet": "8.0.34-beta.0",
+    "@web3-react/core": "8.0.35-beta.0",
+    "@web3-react/eip1193": "8.0.26-beta.0",
+    "@web3-react/empty": "8.0.20-beta.0",
+    "@web3-react/gnosis-safe": "8.0.6-beta.0",
+    "@web3-react/metamask": "8.0.28-beta.0",
+    "@web3-react/network": "8.0.27-beta.0",
+    "@web3-react/types": "8.0.20-beta.0",
+    "@web3-react/url": "8.0.25-beta.0",
+    "@web3-react/walletconnect": "8.0.35-beta.0",
     "antd": "^4.22.8",
     "clipboard-copy": "^4.0.1",
     "ethers": "^5.7.0",
@@ -25,8 +34,7 @@
     "react-use": "^17.4.0",
     "three": "^0.144.0",
     "three-stdlib": "^2.15.0",
-    "vite-plugin-svgr": "^2.2.1",
-    "web3modal": "^1.9.9"
+    "vite-plugin-svgr": "^2.2.1"
   },
   "devDependencies": {
     "@types/node": "^18.7.15",
